--- a/index.html
+++ b/index.html
@@ -1,13 +1,236 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <!-- bootstrap link -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <!-- tailwind link -->
+  <!-- font awesome -->
+  <script src="https://kit.fontawesome.com/de6845e013.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <div class="container d-flex justify-content-between align-items-center">
+        <form action="">
+          <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                <img src="icons/Logo.png" alt="" width="80%" height="70" class="d-inline-block align-text-top">
+
+              </a>
+            </div>
+          </nav>
+        </form>
+        <form action="">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <a class="navbar-brand" href="#">Home</a>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Product</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " href="#">Contact us</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </form>
+      </div>
+  </header>
+  <main>
+    <!-- carousel start -->
+    <section class=" container pb-5">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner bg-success p-3">
+          <div class="carousel-item active p-1">
+            <div class="row">
+              <div class="col-lg-7 d-flex align-items-center">
+                <div>
+                  <h1>NIKE REACT</h1>
+                  <h1>INFINITY RUN 2</h1>
+                  <p>Lorem Ipsum is simply dummy text of the printing
+                    and typesetting industry.
+                  </p>
+                  <button class="bg-success text-sceondry rounded p-1"><i class="fa-solid fa-cart-shopping"></i>Buy
+                    Now</button>
+
+                </div>
+              </div>
+              <div class="col-lg-5">
+                <img src="images/Group 33092.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item ">
+            <div class="row">
+              <div class="col-lg-7 d-flex align-items-center">
+                <div>
+                  <h1>NIKE REACT</h1>
+                  <h1>INFINITY RUN 2</h1>
+                  <p>Lorem Ipsum is simply dummy text of the printing
+                    and typesetting industry.
+                  </p>
+                  <button class="bg-success text-sceondry rounded p-1"><i class="fa-solid fa-cart-shopping"></i>Buy
+                    Now</button>
+
+                </div>
+              </div>
+              <div class="col-lg-5">
+                <img src="images/Group 33092.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-lg-7 d-flex align-items-center">
+                <div>
+                  <h1 class="text-warning">NIKE REACT</h1>
+                  <h1>INFINITY RUN 2</h1>
+                  <p>Lorem Ipsum is simply dummy text of the printing
+                    and typesetting industry.
+                  </p>
+                  <button class="bg-success text-sceondry rounded p-1"><i class="fa-solid fa-cart-shopping"></i>Buy
+                    Now</button>
+
+                </div>
+              </div>
+              <div class="col-lg-5">
+                <img src="images/Group 33092.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
+    <!-- carosuel end -->
+    <!-- shose section start -->
+    <section class="container pb-5">
+      <h1>CASUAL SHOSE</h1>
+      <div class="card-group gap-3">
+        <div class="card">
+          <img src="images/image 5.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Nike Shoe</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content. This content is a little bit longer.</p>
+
+          </div>
+          <div class="d-flex justify-content-between m-2">
+            <h1>$234</h1>
+            <button class="bg-success text-sceondry rounded p-1"><i class="fa-solid fa-cart-shopping"></i>Buy
+              Now</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/image 5.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Sneakers Skate Shoe </h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+
+          </div>
+          <div class="d-flex justify-content-between m-2">
+            <h1>$234</h1>
+            <button class="bg-success text-sceondry rounded p-1"><i class="fa-solid fa-cart-shopping"></i>Buy
+              Now</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/Daco_1703273 1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Sneakers Basketball shoe</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content. This card has even longer content than the first to show that equal height action.</p>
+
+          </div>
+          <div class="d-flex justify-content-between m-2">
+            <h1>$234</h1>
+            <button class="bg-success text-sceondry rounded p-1"><i class="fa-solid fa-cart-shopping"></i>Buy
+              Now</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- shose section end -->
+    <!-- formal shose section start -->
+    <section class="container pb-5">
+      <h1>CASUAL SHOSE</h1>
+      <div class="card-group gap-3">
+        <div class="card">
+          <img src="images/Mask Group.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Nike Shoe</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content. This content is a little bit longer.</p>
+
+          </div>
+          <div class="d-flex justify-content-between m-2">
+            <h1>$234</h1>
+            <button class="bg-success text-sceondry rounded p-1"><i class="fa-solid fa-cart-shopping"></i>Buy
+              Now</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/Rectangle 38.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Sneakers Skate Shoe </h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+
+          </div>
+          <div class="d-flex justify-content-between m-2">
+            <h1>$234</h1>
+            <button class="bg-success text-sceondry rounded p-1"><i class="fa-solid fa-cart-shopping"></i>Buy
+              Now</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/Rectangle 39.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Sneakers Basketball shoe</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content. This card has even longer content than the first to show that equal height action.</p>
+
+          </div>
+          <div class="d-flex justify-content-between m-2">
+            <h1>$234</h1>
+            <button class="bg-success text-sceondry rounded p-1"><i class="fa-solid fa-cart-shopping"></i>Buy
+              Now</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- formal shose section end -->
+    
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
